# remote_claude

./: .dockerignore  .env.example  .gitignore  .npmignore  AGENTS.md  CLAUDE.md  LARK_CLIENT_GUIDE.md  LICENSE  Makefile  README.md  TEST_PLAN.md  init.sh  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  remote_claude.py  requirements.txt  send_lark_msg.py  test_lark_management.sh
client/: __init__.py  base_client.py  client.py  connection_config.py  http_client.py  local_client.py  remote_client.py
docker/: Dockerfile.test  README.md  docker-compose.test.yml
docs/: cli-reference.md  configuration.md  developer.md  docker-test.md  feishu-client.md  feishu-permissions.json  feishu-setup.md  remote-connection.md
lark_client/: __init__.py  capture_output.py  card_builder.py  card_service.py  config.py  lark_handler.py  main.py  output_cleaner.py  session_bridge.py  setup_wizard.py  shared_memory_poller.py  terminal_buffer.py  terminal_renderer.py
scripts/: _common.sh  _help.sh  check-env.sh  completion.sh  install.sh  npm-publish.sh  postinstall.sh  preinstall.sh  report_install.py  setup.sh  test_lark_management.sh  uninstall.sh
server/: biz_enum.py  component_parser.py  rich_text_renderer.py  server.py  shared_state.py  token_manager.py  ws_handler.py
stats/: __init__.py  collector.py  machine.py  query.py
tests/: README.md  TEST_PLAN.md  test_attach_dedup.py  test_auto_answer_analyzer.py  test_auto_answer_block.py  test_auto_answer_integration.py  test_base_client.py  test_biz_enum.py  test_card_interaction.py  test_cli_help_and_remote.py  test_client_integration.py  test_codex_option_block.py  test_component_parser.py  test_custom_commands.py  test_disconnected_state.py  test_e2e.py  test_entry_lazy_init.py  test_env_config.py  test_format_unit.py  test_real.py  (+25 more)
(+92 files in other folders)
