[project]
name = "remote-claude"
version = "1.0.5"
description = "双端共享 Claude CLI 工具"
requires-python = ">=3.11"
dependencies = [
    "lark-oapi==1.5.3",
    "python-dotenv==1.2.2",
    "pyte>=0.8.0",
    "mixpanel>=5.0.0",
    "python-socks[asyncio]>=2.0.0",
    "websockets>=12.0",
]

[project.scripts]
# 保留 console script 以兼容仅供开发态/uv run 的 Python 入口；npm 对外公开入口仍以 package.json -> bin/remote-claude shell launcher 为准。
remote-claude = "remote_claude:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
